# AutoCAR-2D

./: .gitignore  map_generator.py  pyproject.toml  requirements.txt
.github/workflows/: build-check.yml  pip-build-check.yml  poetry-build-check.yml
config/: RL_config.yaml  default_config.yaml
maps/: sample_map.json  test_map.json
scripts/: run_sim2d.py  run_sim2d.sh  run_train_RL.py  test_core_components.sh  test_core_planning_control.sh
src/control/: pid_controller.py  pure_pursuit.py
src/core/: map.py  vehicle.py
src/planning/: a_star.py  base_planner.py  rrt.py
src/simulation/: renderer.py  simulator.py
src/utils/: config_loader.py
tests/: test_core_components.py  test_core_planning_control.py
