[tool.poetry]
name = "autonomous-car-2d"
version = "0.1.0"
description = ""
authors = ["nctrinh <nctrinh2705@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "2.1.3"
pyyaml = "^6.0.3"
scipy = "^1.7.0"
pygame = "^2.1.0"
matplotlib = "^3.5.0"
opencv-python = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
